fix images that are too big on viewer

--- a/css/viewer.css
+++ b/css/viewer.css
@@ -49,7 +49,7 @@
 }
 
 #outerVideoWrapper>img {
-    max-height: 100%;
+    max-height: 90%;
     max-width: 100%;
 }
 
